fix: LSDV-4720: Fix datamanager column styles (#160)
* fix: LSDV-4651: Fix column size when data column is not the last column

* align icons and borders

* fixed resizer line on label

* change style to mod

* make resize handler wider

* change mod name

* add more extra space on the right

* remove the style fix

* fix: LSDV-4720: Fix column styles in DM

* fix: LSDV-4720: Fix datamanager column styles

* align resize content to the middle

* remove empty element

* change header class name on old table

* fix the distance between the checkbox line and next item

* fix text positioning

* add more spacing between text and borders

--- a/src/components/Common/Table/TableHead/TableHead.styl
+++ b/src/components/Common/Table/TableHead/TableHead.styl
@@ -20,7 +20,7 @@
     justify-content flex-end
 
   &__column-extra
-    margin-left 10px
+    margin 0 5px 0 10px
     display flex
     align-items center
   
